<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.krparajuli.collegethrift.CreateListingsActivity">

    <TextView
        android:id="@+id/cl_page_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"

        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf=""

        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/cl_page_header" />

    <ImageView
        android:id="@+id/cl_thumb_image_main"
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_page_heading_text" />

    <EditText
        android:id="@+id/cl_edit_listing_title"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/cl_page_heading_text"
        app:layout_constraintLeft_toRightOf="@+id/cl_thumb_image_main"
        app:layout_constraintRight_toRightOf="parent"

        android:inputType="textCapWords"
        android:text="@string/cl_title_field"/>


    <EditText
        android:id="@+id/cl_edit_listing_desc"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        app:layout_constraintTop_toBottomOf="@+id/cl_edit_listing_title"
        app:layout_constraintLeft_toRightOf="@+id/cl_thumb_image_main"
        app:layout_constraintRight_toRightOf="parent"

        android:text="@string/cl_desc_field"
        android:inputType="textLongMessage" />

    <TextView
        android:id="@+id/cl_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_edit_listing_desc"

        android:text="Type"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/cl_radio_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@+id/cl_type_label"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit_listing_desc"

        android:text="Sale"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/cl_radio_trade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@+id/cl_radio_sale"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit_listing_desc"

        android:text="Trade"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/cl_radio_giveaway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@+id/cl_radio_trade"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit_listing_desc"

        android:text="Giveaway"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/cl_edit_price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@id/cl_radio_giveaway"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_edit_listing_desc"

        android:inputType="numberDecimal"
        android:text="Price"
        android:textSize="12sp" />

    <Button
        android:id="@+id/cl_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit_price"

        android:text="Submit Listing" />


    <!--<TextView-->
        <!--android:id="@+id/cl_page_heading_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:text="@string/cl_page_header"-->
        <!--android:textSize="24sp"-->
        <!--android:textStyle="bold"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:text="Create Listings" />-->

    <!--<EditText-->
        <!--android:id="@+id/cl_edit_listing_title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPersonName"-->
        <!--android:text="@string/cl_title_field"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/cl_page_heading_text"/>-->

    <!--<EditText-->
        <!--android:id="@+id/cl_edit_listing_desc"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPersonName"-->
        <!--android:text="@string/cl_desc_field"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/cl_edit_listing_title" />-->

    <!--<TextView-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="18dp"-->
        <!--android:text="Type"-->
        <!--tools:layout_editor_absoluteX="0dp"-->
        <!--tools:layout_editor_absoluteY="179dp" />-->

    <!--<RadioButton-->
        <!--android:id="@+id/radioButton9"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Sale"-->
        <!--tools:layout_editor_absoluteX="40dp"-->
        <!--tools:layout_editor_absoluteY="179dp" />-->

    <!--<RadioButton-->
        <!--android:id="@+id/radioButton10"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Trade"-->
        <!--tools:layout_editor_absoluteX="163dp"-->
        <!--tools:layout_editor_absoluteY="179dp" />-->

    <!--<RadioButton-->
        <!--android:id="@+id/radioButton11"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Giveaways"-->
        <!--tools:layout_editor_absoluteX="283dp"-->
        <!--tools:layout_editor_absoluteY="179dp" />-->


</android.support.constraint.ConstraintLayout>
